<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reach_wall_action</name>
  <version>0.0.0</version>
  <description>Package for the ReachWall action interface</description>
  <maintainer email="go@todo.todo">go</maintainer>
  <license>TODO: License declaration</license>

  <!-- Core build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for action generation -->
  <depend>action_msgs</depend>

  <!-- Important: declares this package as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Optional test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
